# fwd-client

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
fwd_client/: errors.py  idempotency.py  models.py
go/: README.md  client.go  client_test.go  doc.go  errors.go  errors_test.go  go.mod  idempotency.go  idempotency_test.go  models.go
python/: README.md  pyproject.toml
python/fwd_client/: __init__.py  client.py  errors.py
python/tests/: test_fsp_fwd_client.py  test_fwd_client.py
tests/: test_fwd_client.py
