[tool.poetry]
name = "fwd-client"
version = "0.1.2"
description = "Keyless HTTP client for the fwd signing daemon (fwd v1.1.0a9+ zero-egress / sign-only API). Pure transport: no crypto, no calldata, no broadcast."
authors = ["African Proofs <khosimorafo@yahoo.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "fwd_client" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27"
pydantic = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.8"
mypy = "^1.13"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["fwd_client", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501", "SIM117"]  # SIM117: nested with is idiomatic in pytest (fwd client CM + pytest.raises)

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
